trunk/Archive2/62/b0d09b7a51f614/output
main.cpp: In member function 'T* MyAllocator<N>::aligned_alloc(std::size_t)':
main.cpp:14:13: error: 'align' is not a member of 'std'
         if (std::align(a, sizeof(T), p, sz))
             ^
